--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -2,20 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingTop="@dimen/cards_margin"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="200dp"
         android:id="@+id/card_view"
-        card_view:cardBackgroundColor="#4c3d3d"
-        card_view:cardCornerRadius="4dp"
-        card_view:cardElevation="3dp"
-        app:cardUseCompatPadding="true"
+        card_view:cardBackgroundColor="@color/colorPrimaryDark"
+        card_view:cardCornerRadius="2dp"
         >
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -25,7 +23,7 @@
             <ImageView
                 android:id="@+id/recipe_photo"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 tools:src = "@mipmap/ic_launcher"
                 />
 
@@ -35,8 +33,10 @@
                 android:layout_height="50dp"
                 android:gravity="center"
                 android:layout_alignParentBottom="true"
-                android:textSize="30sp"
+                android:textSize="18sp"
+                android:textColor="@color/main_txt_color"
                 tools:text = "My Recipe Name"
+                android:background="@color/colorAccent"
                 />
         </RelativeLayout>
 
