--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#C84249</color>
     <color name="colorPrimaryDark">#AA242B</color>
     <color name="colorAccent">#2b2b2b</color>
+    <color name="main_txt_color">#ffffff</color>
 
     <!--
 <color name="colorPrimary">#3F51B5</color>
