--- a/app/src/main/res/layout/item_list_content.xml
+++ b/app/src/main/res/layout/item_list_content.xml
@@ -11,7 +11,6 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:id="@+id/card_view"
-        card_view:cardBackgroundColor="@color/colorPrimaryDark"
         card_view:cardCornerRadius="2dp"
         >
         <RelativeLayout
@@ -25,6 +24,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 tools:src = "@mipmap/ic_launcher"
+                android:scaleType="centerCrop"
                 />
 
             <TextView
