--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#2b2b2b</color>
     <color name="main_txt_color">#ffffff</color>
 
+    <color name="colorAccentTransparent">#904c3d3d</color>
+
     <!--
 <color name="colorPrimary">#3F51B5</color>
 <color name="colorPrimaryDark">#303F9F</color>
