--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="text_margin">16dp</dimen>
 
     <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_padding">16dp</dimen>
     <dimen name="cards_margin">8dp</dimen>
 </resources>
