--- a/app/src/main/res/layout-w900dp/list_item_content.xml
+++ b/app/src/main/res/layout-w900dp/list_item_content.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="@dimen/cards_margin"
+    android:paddingRight="@dimen/cards_padding"
+    android:paddingLeft="@dimen/cards_padding"
+    android:paddingTop="@dimen/cards_padding"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="250dp"
         android:id="@+id/card_view"
         card_view:cardCornerRadius="2dp"
         >
