--- a/app/src/main/res/layout-w900dp/main_list.xml
+++ b/app/src/main/res/layout-w900dp/main_list.xml
@@ -21,18 +21,19 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/item_list"
         android:name="com.example.android.bakingchef.ItemListFragment"
-        android:layout_width="@dimen/item_width"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        app:layoutManager="LinearLayoutManager"
+        android:numColumns="auto_fit"
+        app:layoutManager="GridLayoutManager"
         tools:context="com.example.android.bakingchef.MainActivity"
-        tools:listitem="@layout/item_list_content" />
+        tools:listitem="@layout/list_item_content" />
 
-    <FrameLayout
-        android:id="@+id/item_detail_container"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="3" />
+    <!--<FrameLayout-->
+        <!--android:id="@+id/item_detail_container"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:layout_weight="3" />-->
 
 </LinearLayout>
