--- a/app/src/main/res/layout-w900dp/activity_detail.xml
+++ b/app/src/main/res/layout-w900dp/activity_detail.xml
@@ -5,18 +5,35 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/steps_container"
-        android:orientation="vertical"
+    <ScrollView
+        android:id="@+id/ingredients_steps_container"
         android:layout_width="250dp"
-        android:layout_height="match_parent">
-    </LinearLayout>
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
+                android:id="@+id/ingredients_container"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/steps_container"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <LinearLayout
         android:id="@+id/details_container_layout"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_toRightOf="@+id/steps_container"
+        android:layout_toRightOf="@+id/ingredients_steps_container"
         />
 </RelativeLayout>
