--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -20,13 +20,29 @@
         <include layout="@layout/tab_details_layout"/>
 
     </RelativeLayout>
-
-    <Button
+    <LinearLayout
+        android:id="@+id/buttons_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.5"
-        android:background="@color/colorPrimary"
-        android:textColor="@color/main_txt_color"
-        android:text="Next"/>
+        android:orientation="horizontal"
+        android:weightSum="2">
+        <Button
+            android:id="@+id/button_prev_step"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/main_txt_color"
+            android:text="Previous"/>
+        <Button
+            android:id="@+id/button_next_step"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/colorPrimary"
+            android:textColor="@color/main_txt_color"
+            android:text="Next"/>
+    </LinearLayout>
 
 </LinearLayout>
