--- a/app/src/main/res/layout-w900dp/activity_detail.xml
+++ b/app/src/main/res/layout-w900dp/activity_detail.xml
@@ -7,7 +7,7 @@
 
     <ScrollView
         android:id="@+id/ingredients_steps_container"
-        android:layout_width="250dp"
+        android:layout_width="@dimen/step_layput_height"
         android:layout_height="match_parent"
         android:fillViewport="true">
         <LinearLayout
