--- a/app/src/main/res/layout-w900dp/fragment_detail.xml
+++ b/app/src/main/res/layout-w900dp/fragment_detail.xml
@@ -12,7 +12,9 @@
         android:layout_height="0dp"
         android:layout_weight="3"/>
 
-    <RelativeLayout
+    <LinearLayout
+        android:id="@+id/steps_details_container"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2">
@@ -27,7 +29,7 @@
             android:textIsSelectable="true"
             tools:context="com.example.android.bakingchef.DetailFragment" />
 
-    </RelativeLayout>
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/buttons_container"
