Persistent Step onOrientationChanges

--- a/app/src/main/res/layout-w900dp/fragment_detail.xml
+++ b/app/src/main/res/layout-w900dp/fragment_detail.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,23 +13,26 @@
         android:layout_height="0dp"
         android:layout_weight="3"/>
 
+    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/item_detail"
+        style="?android:attr/textAppearanceLarge"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:padding="16dp"
+        android:textIsSelectable="true"
+        android:textColor="@color/main_txt_color"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        tools:text="My Recipe"
+        tools:context="com.example.android.bakingchef.DetailFragment" />
+
     <LinearLayout
         android:id="@+id/steps_details_container"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2">
-
-        <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/item_detail"
-            style="?android:attr/textAppearanceLarge"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="16dp"
-            android:textIsSelectable="true"
-            tools:context="com.example.android.bakingchef.DetailFragment" />
-
+        android:layout_weight="1.5">
     </LinearLayout>
 
     <LinearLayout
