--- a/app/src/main/res/layout-w900dp/fragment_ingredients.xml
+++ b/app/src/main/res/layout-w900dp/fragment_ingredients.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/steps_fragment_container"
+    android:id="@+id/ingredients_fragment_container"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="@dimen/standard_padding">
+    android:layout_margin="@dimen/step_button_margin">
 </LinearLayout>
