--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -3,11 +3,12 @@
     <color name="colorPrimary">#C84249</color>
     <color name="colorPrimaryDark">#AA242B</color>
     <color name="colorPrimaryLight">#f07e89</color>
-    <color name="colorAccent">#2b2b2b</color>
+    <color name="colorAccent">#4c3d3d</color>
     <color name="main_txt_color">#ffffff</color>
 
     <color name="colorAccentTransparent">#904c3d3d</color>
     <color name="button_inactive">#804c3d3d</color>
+    <color name="secondary_txt_color">#118888</color>
 
     <!--
 <color name="colorPrimary">#3F51B5</color>
