--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,13 @@
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="TextMedium" parent="@android:style/TextAppearance.DeviceDefault.Medium">
+        <item name="android:textColor">@color/colorAccent</item>
+    </style>
+    <style name="TextLarge" parent="@android:style/TextAppearance.DeviceDefault.Large">
+        <item name="android:textColor">@color/secondary_txt_color</item>
+    </style>
 
 </resources>
