--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="step_layput_height">250dp</dimen>
     <dimen name="button_width">230dp</dimen>
     <dimen name="button_height">40dp</dimen>
+    <dimen name="text_view_height">40dp</dimen>
 </resources>
