--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -23,4 +23,9 @@
         <item name="android:textColor">@color/secondary_txt_color</item>
     </style>
 
+    <style name="checkBoxStyle" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/secondary_txt_color</item>
+        <item name="colorControlActivated">@color/secondary_txt_color</item>
+    </style>
+
 </resources>
