--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,9 @@
     <dimen name="button_width">230dp</dimen>
     <dimen name="button_height">40dp</dimen>
     <dimen name="text_view_height">40dp</dimen>
+
+    <dimen name="exo_timebar_h">32dp</dimen>
+    <dimen name="exo_txt_size">14sp</dimen>
+    <dimen name="exo_padding">4dp</dimen>
+    <dimen name="exo_margin">4dp</dimen>
 </resources>
