--- a/app/src/main/res/layout-w900dp/fragment_detail.xml
+++ b/app/src/main/res/layout-w900dp/fragment_detail.xml
@@ -12,6 +12,12 @@
         android:layout_height="0dp"
         android:layout_weight="3"
         android:background="@color/exo_bg">
+        <ImageView
+            android:id="@+id/empty_video_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/recipe_video_720x340"/>
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/player_view"
         android:layout_width="match_parent"
