FIxing Phone appearance

--- a/app/src/main/res/layout/tab_details_layout.xml
+++ b/app/src/main/res/layout/tab_details_layout.xml
@@ -14,9 +14,9 @@
             android:id="@+id/item_detail"
             style="?android:attr/textAppearanceLarge"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="16dp"
+            android:padding="@dimen/standard_padding"
             android:textIsSelectable="true"
             android:textColor="@color/main_txt_color"
             tools:text="Recipe Name"/>
