--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,10 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="TextSmall" parent="@android:style/TextAppearance.DeviceDefault.Small">
+        <item name="android:textColor">@color/main_txt_color</item>
+    </style>
+
     <style name="TextMedium" parent="@android:style/TextAppearance.DeviceDefault.Medium">
         <item name="android:textColor">@color/colorAccent</item>
     </style>
