--- a/app/src/main/res/layout-land/list_item_content.xml
+++ b/app/src/main/res/layout-land/list_item_content.xml
@@ -2,15 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:paddingRight="@dimen/cards_padding"
+    android:paddingLeft="@dimen/cards_padding"
     android:paddingTop="@dimen/cards_padding"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/card_h_portrait"
+        android:layout_height="@dimen/card_h_landscape"
         android:id="@+id/card_view"
-        card_view:cardCornerRadius="4dp"
+        card_view:cardCornerRadius="3dp"
         >
         <RelativeLayout
             android:layout_width="match_parent"
