--- a/app/src/main/res/layout-w900dp/list_item_content.xml
+++ b/app/src/main/res/layout-w900dp/list_item_content.xml
@@ -5,15 +5,14 @@
     android:paddingRight="@dimen/cards_padding"
     android:paddingLeft="@dimen/cards_padding"
     android:paddingTop="@dimen/cards_padding"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="@dimen/card_h_w900"
         android:id="@+id/card_view"
-        card_view:cardCornerRadius="2dp"
+        card_view:cardCornerRadius="3dp"
         >
         <RelativeLayout
             android:layout_width="match_parent"
