--- a/app/src/main/res/layout/x_item_detail.xml
+++ b/app/src/main/res/layout/x_item_detail.xml
@@ -6,4 +6,4 @@
     android:layout_height="match_parent"
     android:padding="16dp"
     android:textIsSelectable="true"
-    tools:context="com.example.android.bakingchef.DetailFragment" />
+    tools:context="com.example.android.bakingchef.fragments.DetailFragment" />
