--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -13,4 +13,7 @@
     <color name="exo_playback_bg">#66000000</color>
     <color name="exo_time_txt">#FFBEBEBE</color>
     <color name="exo_bg">#000000</color>
+
+    <color name="white_bg">#ffffff</color>
+    <color name="black_bg">#000000</color>
 </resources>
