--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,4 +26,8 @@
     <dimen name="card_h_portrait">200dp</dimen>
     <dimen name="card_h_landscape">220dp</dimen>
     <dimen name="card_h_w900">250dp</dimen>
+
+    <dimen name="widget_listview_padding_x">16dp</dimen>
+    <dimen name="widget_listview_item_height">45dp</dimen>
+    <dimen name="widget_title_min_height">50dp</dimen>
 </resources>
