--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -28,6 +28,8 @@
     <dimen name="card_h_w900">250dp</dimen>
 
     <dimen name="widget_listview_padding_x">16dp</dimen>
-    <dimen name="widget_listview_item_height">45dp</dimen>
+    <dimen name="widget_listview_item_height">150dp</dimen>
     <dimen name="widget_title_min_height">50dp</dimen>
+    <dimen name="widget_min_height">100dp</dimen>
+    <dimen name="widget_min_width">250dp</dimen>
 </resources>
