--- a/app/src/main/res/xml/collection_widget.xml
+++ b/app/src/main/res/xml/collection_widget.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:minWidth="40dp"
-    android:minHeight="40dp"
+    android:minWidth="@dimen/widget_min_width"
+    android:minHeight="@dimen/widget_min_height"
     android:updatePeriodMillis="864000"
     android:previewImage="@drawable/recipe_video_720x340"
     android:initialLayout="@layout/collection_widget_layout"
