--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,6 +30,11 @@
     <dimen name="widget_listview_padding_x">16dp</dimen>
     <dimen name="widget_listview_item_height">150dp</dimen>
     <dimen name="widget_title_min_height">50dp</dimen>
-    <dimen name="widget_min_height">100dp</dimen>
-    <dimen name="widget_min_width">250dp</dimen>
+    <dimen name="widget_btn_height">30dp</dimen>
+    <dimen name="widget_padding_container">8dp</dimen>
+    <dimen name="widget_text_regular_size">15sp</dimen>
+    <dimen name="widget_img_height">100dp</dimen>
+
+    <dimen name="widget_min_height">200dp</dimen>
+    <dimen name="widget_min_width">292dp</dimen>
 </resources>
