--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.example.android.bakingchef.activities.MainActivity">
+    tools:context="com.example.android.bakingchef.activities.MainActivity"
+    android:id="@+id/coordinator_layout">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
