--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -12,10 +12,11 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
         <LinearLayout
+            android:id="@+id/ingredients_steps_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <TextView xmlns:android="http://schemas.android.com/apk/res/android"
+            <TextView
                 android:id="@+id/item_detail"
                 style="?android:attr/textAppearanceMedium"
                 android:layout_width="match_parent"
