--- a/app/src/main/res/layout/list_item_content.xml
+++ b/app/src/main/res/layout/list_item_content.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="@dimen/cards_padding"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/card_main_container">
 
     <android.support.v7.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -13,6 +14,7 @@
         card_view:cardCornerRadius="4dp"
         >
         <RelativeLayout
+            android:id="@+id/card_info_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
