--- a/app/src/main/res/layout-w900dp/activity_detail.xml
+++ b/app/src/main/res/layout-w900dp/activity_detail.xml
@@ -11,6 +11,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true">
         <LinearLayout
+            android:id="@+id/ingredients_steps_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
