--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="5">
+    android:weightSum="5"
+    android:id="@+id/details_fragment_main_container">
 
     <FrameLayout
         android:id="@+id/exo_player_main_layout"
@@ -26,6 +27,7 @@
     </FrameLayout>
 
     <RelativeLayout
+        android:id="@+id/tab_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="2.5">
