--- a/app/src/main/res/layout/tab_details_layout.xml
+++ b/app/src/main/res/layout/tab_details_layout.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/tabs_coordinator_layout">
 
     <android.support.design.widget.AppBarLayout
+        android:id="@+id/tabs_app_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
