--- a/app/src/main/res/layout/widget_layout.xml
+++ b/app/src/main/res/layout/widget_layout.xml
@@ -3,7 +3,6 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_margin="5sp"
     android:background="@drawable/appwidget_dark_bg"
     android:orientation="vertical">
 
@@ -39,13 +38,14 @@
         android:layout_height="match_parent"
         android:layout_above="@id/buttonContainer"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal"
-        android:padding="@dimen/widget_padding_container" >
+        android:layout_marginLeft="@dimen/standard_margin"
+        android:layout_marginRight="@dimen/standard_margin"
+        android:layout_marginTop="@dimen/widget_half_margin"
+        android:orientation="horizontal">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingBottom="5dp"
             android:layout_weight="0.5">
         <TextView
             android:id="@+id/title"
@@ -59,18 +59,29 @@
             android:textAppearance="?android:textAppearanceLarge"
             />
             <TextView
-                android:id="@+id/desc"
-                android:layout_width="fill_parent"
+                android:id="@+id/loading_msg"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="@string/app_name"
+                android:layout_centerInParent="true"
+                android:gravity="center"
+                android:text="@string/widget_loading"
                 android:textColor="@color/main_txt_color"
                 android:textSize="@dimen/widget_text_regular_size"
                 android:textStyle="normal"
-                android:layout_below="@+id/title"/>
+                />
+            <ListView
+                android:id="@+id/desc_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/title"
+                android:paddingTop="@dimen/standard_padding"
+                android:paddingBottom="@dimen/standard_padding"
+                android:paddingRight="@dimen/standard_padding"/>
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/widget_half_margin"
             android:layout_weight="1.5">
         <ImageView
             android:id="@+id/image"
